--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -11,6 +11,35 @@ $fa-font-path: '../webfonts';
 
 @import 'bootstrap/scss/bootstrap';
 
+//Animation
+.breathing{
+    animation: breathing 3s infinite;
+}
+
+@keyframes breathing {
+    0% {
+      transform: scale(1);
+    }
+    50% {
+      transform: scale(1.3);
+    }
+    100% {
+      transform: scale(1);
+    }
+}
+
+@keyframes scaleHover {
+    0% {
+        transform: scale(1.1);
+      }
+      50% {
+        transform: scale(0.9);
+      }
+      100% {
+        transform: scale(1.1);
+      }
+}
+
 
 //GENERAL
 body{
